<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:columnCount="2"
    android:padding="10dp"
    tools:context=".MainActivity2"
    android:background="@color/darkwhite"

    >





        <TextView
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/exam"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:elevation="5dp"

            />




    <Spinner
        android:layout_height="40dp"
        android:layout_width="match_parent"
        android:entries="@array/exams"
        android:id="@+id/exams"
        android:background="@color/white"
        android:textSize="17dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:elevation="5dp"



        />


    <TextView
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:text="@string/category"
        android:textColor="@color/white"
        android:textSize="17dp"
        android:background="@color/blue"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:elevation="5dp"
        />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:entries="@array/category"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:id="@+id/category"
        android:elevation="5dp"
        />
    <TextView
        android:layout_height="40dp"
        android:layout_width="160dp"
        android:text="@string/rank"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:textSize="17dp"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:elevation="5dp"

       />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:hint="@string/enterrank"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:inputType="number"
        android:id="@+id/meritRank"
        android:elevation="5dp"

        />
    <TextView
        android:layout_height="40dp"
        android:layout_width="160dp"
        android:text="@string/collegetype"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:textSize="17dp"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:elevation="5dp"
        />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:entries="@array/collegetype"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:id="@+id/collegeType"
        android:elevation="5dp"
        />
    <TextView
        android:layout_height="40dp"
        android:layout_width="160dp"
        android:gravity="center"
        android:text="@string/seatpool"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:textSize="17dp"
        android:layout_marginBottom="10dp"
        android:elevation="5dp"
        />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:entries="@array/seatpool"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:id="@+id/seatPool"
        android:elevation="5dp"
        />


    <Button
        android:layout_height="wrap_content"
        android:layout_width="160dp"
        android:text="@string/show"
        android:textSize="17dp"
        android:layout_column="0"
        android:onClick="onClickShow"
        android:textStyle="bold"



        />

</GridLayout>
