<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="50dp"
    android:paddingBottom="30dp"
    android:orientation="vertical"
    android:background="@color/darkwhite"

    >


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        card_view:cardCornerRadius="10dp"
        android:layout_marginBottom="10dp"
        card_view:cardElevation="15dp"
        card_view:cardBackgroundColor="@color/white"





       >

        <Button
            android:layout_height="60dp"
            android:layout_width="match_parent"
            android:textStyle="italic"
            android:id="@+id/cutoff"
            android:textSize="17dp"
            android:text="@string/cutoff"
            android:onClick="onClickCutOff"
            android:layout_gravity="center"




            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        card_view:cardCornerRadius="10dp"
        android:layout_marginBottom="10dp"
        card_view:cardElevation="15dp"
        card_view:cardBackgroundColor="@color/white">

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/college"
            android:textSize="17dp"
            android:textStyle="italic"
            android:id="@+id/college"
            android:onClick="onClickCollege"
            android:layout_gravity="center"



            />
    </androidx.cardview.widget.CardView>

   <androidx.cardview.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="80dp"
       card_view:cardCornerRadius="10dp"
       android:layout_marginBottom="10dp"
       card_view:cardElevation="15dp"
       card_view:cardBackgroundColor="@color/white">
       <Button
           android:layout_height="60dp"
           android:layout_width="match_parent"
           android:text="@string/branch"
           android:textStyle="italic"
           android:textSize="17dp"
           android:onClick="onClickBranch"
           android:id="@+id/branch"
           android:layout_gravity="center"



           />
   </androidx.cardview.widget.CardView>



    <ListView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"



    />


</LinearLayout>


